# geometric-bayesian

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: classification.ipynb  classification.py  diffusion_explore.ipynb  features_mixtures.ipynb  gp.py  mnist.ipynb  mnist.py  regression.ipynb  regression.py  test.ipynb  tests.ipynb
geometric_bayesian/approx/: mc.py
geometric_bayesian/curv/: ggn.py
geometric_bayesian/densities/: __init__.py  abstract_density.py  bernoulli.py  categorical.py  multivariate_normal.py  normal.py
geometric_bayesian/functions/: likelihood.py
geometric_bayesian/geom/: embedding.py  metric.py
geometric_bayesian/integrate/: __init__.py  ef.py  euler_forward.py  integrate.py  ode23.py  ode45.py
geometric_bayesian/kernels/: __init__.py  ard.py  periodic.py  rbf.py
geometric_bayesian/linalg/: diagonalize.py  eigvec_tridiagonal.py  lanczos.py  woodbury_solve.py
geometric_bayesian/models/: __init__.py  abstract_model.py  gp.py  mlp.py  nnx_free.py
geometric_bayesian/operators/: __init__.py  dense_operator.py  diag_operator.py  inv_operator.py  linear_operator.py  low_rank_operator.py  mul_operator.py  psd_operator.py  sum_operator.py  sym_operator.py
geometric_bayesian/utils/: __init__.py  ggn.py  helper.py  jax.py  math.py  plot.py  plotting.py  train.py  types.py
tests/: check_density.py  check_derivatives.py  check_op_methods.py  models.py  simple_posterior.py
