[project]
name = "geometric-bayesian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flax>=0.10.5",
    "ipympl>=0.9.7",
    "jax[cuda13]>=0.8.2",
    "jaxtyping>=0.3.1",
    "jupyterlab>=4.4.0",
    "jupyterlab-nvdashboard>=0.13.0",
    "matplotlib>=3.10.1",
    "optax>=0.2.4",
    "scikit-image>=0.25.2",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
]
